# coursemology-py

./: .gitignore  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
coursemology_py/: __init__.py  auth.py  client.py  exceptions.py  utils.py
coursemology_py/api/: assessment_base.py  base.py  courses.py  jobs.py
coursemology_py/api/course/: __init__.py  announcements.py  answers.py  assessments.py  comments.py  disbursement.py  experience_points.py  forums.py  groups.py  posts.py  statistics.py  submission_questions.py  submissions.py  user_invitations.py  users.py
coursemology_py/api/course/assessment/: categories.py  question.py
coursemology_py/models/: common.py  courses.py  jobs.py
coursemology_py/models/course/: announcements.py  assessments.py  comments.py  disbursement.py  experience_points.py  forums.py  groups.py  posts.py  statistics.py  submission_questions.py  submissions.py  user_invitations.py  users.py
coursemology_py/models/course/assessment/: answer_payloads.py  answer_with_question.py  categories.py  questions.py
tests/: conftest.py
tests/api/: test_announcements.py  test_assessments.py  test_courses.py  test_disbursement.py  test_experience_points.py  test_forums.py  test_groups.py  test_statistics.py  test_submissions.py  test_users.py
