[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coursemology-py"
version = "0.1.0"
description = "A Python client for the Coursemology."
readme = "README.md"
authors = [
  { name = "Muhammad Rizki Maulana", email = "rizki@rizkiarm.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.32.5",
    "pydantic>=2.12.3",
    "polars>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-dependency>=0.6.0",
    "ruff>=0.14.2",
    "mypy>=1.18.2",
    "types-requests>=2.23.4",
    "python-dotenv>=1.2.1",
]

# --- Tool Configurations ---

[tool.setuptools.packages.find]
where = ["."]
include = ["coursemology_py*"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["coursemology_py"]
exclude = ["_dev", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"] # A good, strict starting set

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.13"
files = "coursemology_py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"